Favicon and minor updates done

--- a/FrontEnd/views/index.html
+++ b/FrontEnd/views/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homie</title>
+    <link rel="icon" href="../assets/Mood_Illustration.svg" type="image/svg">
     <link rel="stylesheet" href="../styles/index.css">
 </head>
 <body>
-    <div id="section1">
+    <div id="section1" class="section">
 
         <div class="bulb">
             <div id="bulb-small"><img src="../assets/light_small.svg" alt=""></div>
@@ -48,6 +49,10 @@
             </svg>
         </div>
     </div>
+
+    <hr>
+
+    <div class="section" id="section2">a</div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous"></script>
     <script src="../scripts/index.js"></script>
