--- a/FrontEnd/styles/index.css
+++ b/FrontEnd/styles/index.css
@@ -12,14 +12,16 @@ body {
   background: #00367C;
   width: 100vw;
   height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 #section1 {
   width: 100vw;
   height: 100vh;
+}
+
+#section2 {
+  height: 100vh;
+  width: 100vw;
 }
 
 .bulb {
@@ -101,8 +103,8 @@ body {
   padding: 10px;
   border-radius: 100%;
   background: #001E4D;
-  -webkit-box-shadow: 4px 4px 7px #00134d;
-          box-shadow: 4px 4px 7px #00134d;
+  -webkit-box-shadow: 2px 2px 7px #000c31, -2px -2px 7px #000c31;
+          box-shadow: 2px 2px 7px #000c31, -2px -2px 7px #000c31;
   opacity: 0.2;
   display: -webkit-box;
   display: -ms-flexbox;
