--- a/FrontEnd/styles/index.scss
+++ b/FrontEnd/styles/index.scss
@@ -11,11 +11,17 @@ body {
     background: #00367C;
     width: 100vw;
     height: 100vh;
-    display: flex;
+    // display: flex;
+    // flex-direction: column;
 }
 #section1 {
     width: 100vw;
     height: 100vh;
+}
+#section2 {
+    height: 100vh;
+    width: 100vw;
+    // background: #000;
 }
 .bulb {
     display: flex;
@@ -75,7 +81,8 @@ body {
     padding: 10px;
     border-radius: 100%;
     background:#001E4D;
-    box-shadow: 4px 4px 7px #00134d;
+    box-shadow: 2px 2px 7px #000c31,
+                -2px -2px 7px #000c31;
     opacity: 0.2;
     // border: 2px solid red;
     display: flex;
