--- a/FrontEnd/views/index.html
+++ b/FrontEnd/views/index.html
@@ -5,11 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homie</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="icon" href="../assets/Mood_Illustration.svg" type="image/svg">
     <link rel="stylesheet" href="../styles/index.css">
 </head>
 <body>
     <div id="section1" class="section">
+        <div id="download-btn">
+            <a href="" download=""><i class="fas fa-arrow-circle-down"></i>Download our app</a>
+        </div>
 
         <div class="bulb">
             <div id="bulb-small"><img src="../assets/light_small.svg" alt=""></div>
@@ -32,6 +38,8 @@
                 </div>
             </div>
         </div>
+
+        <div class="down-arrow"><a href="#section2"><i class="fas fa-chevron-down"></i></a></div>
 
     </div>
 
