--- a/FrontEnd/styles/index.css
+++ b/FrontEnd/styles/index.css
@@ -15,13 +15,20 @@ body {
 }
 
 #section1 {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
 #section2 {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
+  background: #00367C;
+}
+
+#section3 {
+  height: 100vh;
+  width: 100%;
+  border: 2px solid red;
 }
 
 #download-btn {
@@ -258,6 +265,10 @@ body {
   right: 9%;
 }
 
+.down-arrow a {
+  opacity: 0;
+}
+
 .down-arrow a i {
   font-size: 50px;
   color: #9098bd;
@@ -306,5 +317,48 @@ body {
 .gears .inner svg path {
   -webkit-filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.7));
   filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.7));
+}
+
+div.gears2 {
+  position: absolute;
+  right: 350px;
+  top: 150vh;
+}
+
+div.gears2 .outer2 {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+div.gears2 .outer2 svg #cls-o2 {
+  fill: #f73c57;
+}
+
+div.gears2 .outer2 svg path {
+  -webkit-filter: drop-shadow(-2px -2px 5px rgba(0, 0, 0, 0.7));
+  filter: drop-shadow(-2px -2px 5px rgba(0, 0, 0, 0.7));
+}
+
+div.gears2 #Layer_ooo {
+  height: 700px;
+  width: 700px;
+}
+
+div.gears2 .inner2 {
+  -webkit-transform: translate(-13%, 52%);
+          transform: translate(-13%, 52%);
+}
+
+div.gears2 .inner2 svg #cls-o2 {
+  fill: transparent;
+}
+
+div.gears2 .inner2 svg path {
+  -webkit-filter: drop-shadow(-2px -2px 5px rgba(0, 0, 0, 0.7));
+  filter: drop-shadow(-2px -2px 5px rgba(0, 0, 0, 0.7));
 }
 /*# sourceMappingURL=index.css.map */
