--- a/FrontEnd/views/index.html
+++ b/FrontEnd/views/index.html
@@ -58,9 +58,36 @@
         </div>
     </div>
 
-    <hr>
+    <!-- <hr> -->
 
-    <div class="section" id="section2">a</div>
+    <div class="section" id="section2">
+
+
+    </div>
+
+    <div class="gears gears2">
+        <div class="outer outer2" id="outergear">
+            <svg id="Layer_ooo" viewBox="0 0 35.82 488.82">
+                <!-- <defs><style>#cls-oo{fill:#8664ad;}</style></defs> -->
+                <path id="cls-o2" fill="#f73c57" d="M220.14,31.11C225.49-3,274.67-3,280,31.11h0c4.07,26,37,34.8,53.53,14.35h0c21.71-26.91,64.3-2.32,51.86,29.94h0c-9.47,24.52,14.65,48.64,39.18,39.18h0c32.26-12.44,56.85,30.15,29.94,51.86h0C434.07,183,442.9,215.9,468.88,220h0c34.15,5.35,34.15,54.53,0,59.88h0c-26,4.07-34.81,37-14.35,53.52h0c26.91,21.72,2.32,64.31-29.94,51.86h0c-24.53-9.46-48.65,14.66-39.18,39.19h0c12.44,32.25-30.15,56.84-51.86,29.94h0C317,433.9,284.09,442.73,280,468.7h0c-5.35,34.16-54.53,34.16-59.88,0h0c-4.07-26-37-34.8-53.53-14.34h0c-21.71,26.9-64.3,2.31-51.86-29.94h0c9.47-24.53-14.65-48.65-39.18-39.19h0c-32.25,12.45-56.84-30.14-29.94-51.86h0c20.46-16.51,11.63-49.45-14.34-53.52h0c-34.16-5.35-34.16-54.53,0-59.88h0c26-4.07,34.8-37,14.34-53.53h0c-26.9-21.71-2.31-64.3,29.94-51.86h0C100.1,124,124.22,99.92,114.75,75.4h0c-12.44-32.26,30.15-56.85,51.86-29.94h0c16.51,20.45,49.46,11.63,53.53-14.35Z" transform="translate(-5.67 -5.5)"/>
+            </svg>
+        </div>
+        <div class="inner inner2" id="innergear">
+            <svg id="Layer_i2" viewBox="-230 0 470.11 468.94">
+                <!-- <defs><style>#cls-ii{fill:#f73c57;fill-opacity:0.9;}</style></defs> -->
+                <path id="cls-i2" fill="#8664ad" d="M125.9,71.27c-8.54-49.88,56.44-76.8,85.67-35.48,18.93,26.74,58.71,26.63,77.66-.1,29.19-41.17,94.26-14.61,85.59,35.11a47.35,47.35,0,0,0,54.72,54.78c49.76-8.62,76.63,56.25,35.35,85.34a47.35,47.35,0,0,0,0,77.43c41.29,29,14.06,93.81-35.7,85.35-32.3-5.5-60.5,22.55-55,54.84,8.54,49.89-56.44,76.8-85.67,35.48-18.93-26.74-58.7-26.63-77.66.1-29.19,41.17-94.25,14.61-85.59-35.11a47.34,47.34,0,0,0-54.71-54.78C20.86,382.85-6,318,35.28,288.89a47.35,47.35,0,0,0-.05-77.42c-41.29-29-14.06-93.82,35.7-85.35C103.23,131.62,131.44,103.57,125.9,71.27Z" transform="translate(-15.02 -15.43)"/>
+            </svg>
+        </div>
+    </div>
+
+    <!-- <div class="down-arrow arrow2"><a href="#section3"><i class="fas fa-chevron-down"></i></a></div> -->
+
+    <div class="section" id="ssection3">
+        <div class="dos">
+            fghjhgfghjk
+        </div>
+    </div>
+
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous"></script>
     <script src="../scripts/index.js"></script>
