--- a/FrontEnd/styles/index.scss
+++ b/FrontEnd/styles/index.scss
@@ -27,7 +27,8 @@ body {
 #section3 {
     height: 100vh;
     width: 100%;
-    border: 2px solid red;
+    // border: 2px solid red;
+    // padding: 20px;
 }
 #download-btn {
     width: fit-content;
@@ -309,7 +310,116 @@ div.gears2 {
         }
     }
 }
+.upper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 80%;
+}
+.lower {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.dos, .donts, .music{
+    // border: 1px solid red;
+    height: fit-content;
+    width: fit-content;
+    padding: 0px 10px;
+    margin: 10px 10px;
+    svg {
+        height: 600px;
+        width: 600px;
+    }
+}
 
+.menu {
+    height: fit-content;
+    width: 80%;
+    // border: 2px solid red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    select {
+        height: 60px;
+        width: 500px;
+        font-family: 'Roboto', sans-serif;
+        font-size: 20px; 
+        margin: 10px 80px; 
+        background: #000c31;
+        color: #ffffff;
+        border: none;
+        border-radius: 10px;
+        cursor: pointer;
+        option {
+            background: #00367C;
+            color: #ffffff;
+        }    
+    }
+    input[type="Submit"] {
+        // height: 40px;
+        // width: 100px;
+        height: fit-content;
+        width: fit-content;
+        font-size: 20px;
+        // margin: 0px 10px 0px 0px;
+        // background: #f73c57;
+            height: 40px;
+            width: 100px;
+            font-size: 20px;
+            background: #f73c57;
+            color: #fff;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+    }
+}
+.btn-mood:hover {
+    background: #00367C;
+}
+select:focus, button:focus{
+    outline: none !important;
+}
+.dos {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+.dos-content {
+    height: fit-content;
+    max-height: 300px;
+    overflow-y: scroll;
+    width: fit-content;
+    padding: 10px;
+    margin: 10px;
+    // border: 2px solid red;
+    position: absolute;
+    top: 230vh;
+    left: 9%;
+    box-shadow: 2px 2px 4px #000c31 inset, -2px -2px 4px #000c31 inset;
+}
+.do {
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    color: #000c31;
+    width: 350px;
+    max-width: 350px;
+    overflow-wrap: break-word;
+    padding: 10px 0px;
+    border-bottom: 1px dashed black;
+}
+
+.dont-content {
+    left: 48.5%;
+}
+
+.music-content {
+    left: 29%;
+    top: 300vh;
+    max-height: 320px;
+    box-shadow: 2px 2px 4px #000c31 inset, -2px -2px 4px #000c31 inset;
+}
 // .arrow2 {
 //     position: absolute;
 //     top: 185vh;
