--- a/FrontEnd/views/index.html
+++ b/FrontEnd/views/index.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homie</title>
+    <script src="https://code.highcharts.com/stock/highstock.js"></script>
+    <script src="https://code.highcharts.com/highcharts-more.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="http://blacklabel.github.io/grouped_categories/grouped-categories.js"></script>   
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="icon" href="../assets/Mood_Illustration.svg" type="image/svg">
     <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div id="section1" class="section">
@@ -61,8 +66,16 @@
     <!-- <hr> -->
 
     <div class="section" id="section2">
-
-
+        <!-- Added from here -->
+        <div class="container">
+            <div class="block">
+                <figure class="highcharts-figure">
+                    <div id="graph"></div>
+                </figure>
+            </div>
+            
+        </div>
+        <!-- Till here and also a script tag -->
     </div>
 
     <div class="gears gears2">
@@ -141,6 +154,86 @@
 
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous"></script>
+    <script>
+        Highcharts.chart('graph', {
+    chart: {
+        type: 'column',
+        backgroundColor: '#9098BD'
+    },
+    title: {
+        text: 'Country Wise Suicide Rates',
+        style: {
+            color: '#001E4D'
+        }
+    },
+    subtitle: {
+        text: 'Data as of 2020',
+        style: {
+            color: '#001E4D'
+        }
+    },
+    xAxis: {
+        labels: {
+            style: {
+                color: '#001e4d'
+            }
+        },
+        categories: [
+            'India',
+            'USA',
+            'China',
+            'Russia',
+            'France',
+            'Germany'
+            
+        ],
+        crosshair: true
+    },
+    yAxis: {
+        
+        labels: {
+            style: {
+                color: '#001e4d'
+            }
+        },
+        min: 0,
+        title: {
+            text: 'No. of deaths',
+            style: {
+                color: '#001e4d'
+            }
+        }
+    },
+    colors: ["#2a63ac", "#f73c57", "8664ad"],
+    tooltip: {
+        headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
+        pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
+            '<td style="padding:0"><b>{point.y:.1f} mm</b></td></tr>',
+        footerFormat: '</table>',
+        shared: true,
+        useHTML: true
+    },
+    plotOptions: {
+        column: {
+            pointPadding: 0.2,
+            borderWidth: 0
+        }
+    },
+    series: [{
+        name: 'Male',
+        data: [18.5, 21.1, 7.9, 48.3, 17.9, 13.6]
+        
+    }, {
+        name: 'Female',
+        data: [14.5, 6.4, 8.3, 7.5, 6.5, 4.8]
+        
+    }, {
+        name: 'Gender Neutral',
+        data: [16.5, 13.7, 8, 26.5, 12.1, 9.1]
+
+    }]
+});
+    </script>
     <script src="../scripts/index.js"></script>
 </body>
 </html>
